# rapid-detector

./: .gitignore  Dockerfile  README.md  pyproject.toml  start_services.py
app/: __init__.py  api.py
app/static/: app.js  canvas-annotations.js  index.html  style.css
examples/: rapid_detector_colab.ipynb
rapid_detector/: __init__.py  detector.py  storage.py  utils.py  visual_encoder.py
